--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix" : "",
-	"token" : "",
-	"delay" : "delay in secs without any unit, for eg: 5",
-	"log_dms" : "enable or disable the logging after each DM"
+	"prefix" : "--",
+	"ODk0MDUxNjA3ODI0Njk5Mzk0.YVkYcQ.Id2fiMIaNyw0jJr8vvp05SumGxY" : "",
+	"delay" : "1",
+	"log_dms" : "on"
 }
